[package]
name = "binny"
version = "0.1.1"
authors = ["Clay Raynor <cd.raynor@gmail.com>"]
edition = "2018"
license = "LGPL"
license-file = "COPYING"
description = "A general purpose library for parsing common binary file formats such as mp3, wav, jpeg, etc."
readme = "README.md"
repository = "https://github.com/CDRayn/binny"
categories = ["parsing"]
keywords = ["parser", "binary", "blob"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
